fixed layout error for small screens
when screen got too thin content would hug right side because left margin was too big. Now content is centered for mobile devices

--- a/styles.css
+++ b/styles.css
@@ -286,6 +286,9 @@ h1, h2, h3, h4, h5, h6 {
 
 /*Mobile Specifications (or if window gets too narrow*/
 @media (max-width: 600px) {
+    .content {
+        padding: 1rem;
+    }
     .card-body {
         flex-direction: column;
         align-items: flex-start;
